--- a/public/assets/styles/sass/abstracts/_varcolors.scss
+++ b/public/assets/styles/sass/abstracts/_varcolors.scss
@@ -64,6 +64,9 @@ $jaune-main: #F2E554;
 // Rose
 $rose-main: #ec407a;
 
+$corail: #FF8559;
+$corail-dark : #e86566;
+
 // Neutres
 $noir: #000000;
 $noir-light: #161616;
