--- a/public/assets/styles/sass/pages/login.scss
+++ b/public/assets/styles/sass/pages/login.scss
@@ -24,8 +24,17 @@ main {
   box-sizing: border-box;
   position: relative;
 
-    @include mixins.breakpoint(mediumLarge) {
-    padding-top :0vh;
+  @include mixins.breakpoint(small) {
+    margin-top :5vh;
+    
+  }
+
+  @include mixins.breakpoint(medium) {
+    margin-top:5vh;
+  }
+  
+  @include mixins.breakpoint(mediumLarge) {
+    padding-top: 10vh;
     margin-top: 20vh;
   }
 
@@ -42,7 +51,7 @@ main {
     white-space: nowrap;
     border: 0;
   }
-}
+
 
 // =================================
 // FORMULAIRE LOGIN
@@ -484,4 +493,5 @@ main {
       transition: none !important;
     }
   }
+}
 }
