--- a/views/templates/subpages/_header.html.twig
+++ b/views/templates/subpages/_header.html.twig
@@ -88,6 +88,10 @@
             <li>
                 <a href="?route=contact">Contact</a>
             </li>
+            <li>
+                <a href="?route=pedagogie">Notre philosophie</a>
+            </li>
+
         </ul>
     {% elseif user.role == 2 %}
         {# Navigation Admin #}
@@ -106,6 +110,9 @@
             </li>
             <li>
                 <a href="index.php?route=displayGame">Jeux</a>
+            </li>
+            <li>
+                <a href="?route=pedagogie">Notre philosophie</a>
             </li>
         </ul>
     {% elseif user.role == 1 and user.statut == 1 %}
@@ -126,6 +133,9 @@
             <li>
                 <a href="index.php?route=games">Jeux</a>
             </li>
+            <li>
+                <a href="?route=pedagogie">Pédagogie</a>
+            </li>
         </ul>
     {% else %}
         {# Navigation limitée #}
@@ -135,6 +145,9 @@
             </li>
             <li>
                 <a href="index.php?route=contact">Contact</a>
+            </li>
+            <li>
+                <a href="?route=pedagogie">Notre philosophie</a>
             </li>
             {% if user.statut == 0 %}
                 <li>
